--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
+    "hoek": "^5.0.3",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
-    "react-native-router-flux": "^4.0.0-beta.28"
+    "react-native-router-flux": "^4.0.0-beta.30"
   }
 }
